--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,44 @@ SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.assets.cache
 SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
 SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.assets.cache
 SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.AssemblyReference.cache
+SamuraiApp.Data/bin/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.deps.json
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Data/obj/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.assets.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.CoreCompileInputs.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/obj/project.assets.json
+SamuraiApp.Data/obj/project.nuget.cache
+SamuraiApp.Data/obj/SamuraiApp.Data.csproj.nuget.dgspec.json
+SamuraiApp.Data/obj/SamuraiApp.Data.csproj.nuget.g.props
+SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.g.props
+SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.dgspec.json
+SamuraiApp.UI/obj/project.nuget.cache
+SamuraiApp.UI/obj/project.assets.json
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.CoreCompileInputs.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.AssemblyReference.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.assets.cache
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.deps.json
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.Extensions.DependencyInjection.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Relational.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Design.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.assets.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.assets.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.AssemblyReference.cache
