--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,131 @@ SamuraiApp.UI/obj/project.nuget.cache
 SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.dgspec.json
 SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.g.props
 SamuraiApp/.vs/SamuraiApp/v17/.suo
+SamuraiApp.Data/bin/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.deps.json
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Data/obj/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.assets.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.CoreCompileInputs.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/obj/project.assets.json
+SamuraiApp.Data/obj/project.nuget.cache
+SamuraiApp.Data/obj/SamuraiApp.Data.csproj.nuget.dgspec.json
+SamuraiApp.Data/obj/SamuraiApp.Data.csproj.nuget.g.props
+SamuraiApp.Domain/bin/Debug/net5.0/ref/SamuraiApp.Domain.dll
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.deps.json
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Domain/obj/Debug/net5.0/ref/SamuraiApp.Domain.dll
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.assets.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.csproj.AssemblyReference.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.csproj.CoreCompileInputs.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.csproj.FileListAbsolute.txt
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Domain/obj/project.assets.json
+SamuraiApp.Domain/obj/project.nuget.cache
+SamuraiApp.Domain/obj/SamuraiApp.Domain.csproj.nuget.dgspec.json
+SamuraiApp.Domain/obj/SamuraiApp.Domain.csproj.nuget.g.props
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.assets.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.csproj.AssemblyReference.cache
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Design.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Relational.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.Extensions.DependencyInjection.dll
+SamuraiApp.UI/bin/Debug/net5.0/ref/SamuraiApp.UI.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.deps.json
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/bin/Debug/net5.0/System.Diagnostics.DiagnosticSource.dll
+SamuraiApp.UI/obj/Debug/net5.0/ref/SamuraiApp.UI.dll
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.assets.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.AssemblyReference.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.CoreCompileInputs.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.FileListAbsolute.txt
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/obj/project.assets.json
+SamuraiApp.UI/obj/project.nuget.cache
+SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.dgspec.json
+SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.g.props
+SamuraiApp/.vs/SamuraiApp/v17/.suo
+SamuraiApp/SamuraiApp.API/appsettings.Development.json
+SamuraiApp/SamuraiApp.API/appsettings.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/appsettings.Development.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/appsettings.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/cs/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/.vs/SamuraiApp/v17/.suo
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/cs/Microsoft.CodeAnalysis.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/cs/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/de/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/de/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/de/Microsoft.CodeAnalysis.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/de/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/dotnet-aspnet-codegenerator-design.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/es/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/es/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ko/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ko/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ja/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ja/Microsoft.CodeAnalysis.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ja/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/ja/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/it/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/it/Microsoft.CodeAnalysis.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/it/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/it/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/Humanizer.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/fr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/fr/Microsoft.CodeAnalysis.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/fr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/fr/Microsoft.CodeAnalysis.CSharp.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/es/Microsoft.CodeAnalysis.Workspaces.resources.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/es/Microsoft.CodeAnalysis.resources.dll
+*.dll
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-arm/lib/net5.0/dotnet-aspnet-codegenerator-design.exe
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-arm64/lib/net5.0/dotnet-aspnet-codegenerator-design.exe
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.API.deps.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.API.exe
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.API.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.API.runtimeconfig.dev.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.API.runtimeconfig.json
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp/SamuraiApp.API/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp/SamuraiApp.API/Controllers/SamuraisController.cs
+SamuraiApp/SamuraiApp.API/Controllers/WeatherForecastController.cs
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/apphost.exe
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.AssemblyInfo.cs
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.AssemblyInfoInputs.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.csproj.AssemblyReference.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.csproj.CopyComplete
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.csproj.CoreCompileInputs.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.csproj.FileListAbsolute.txt
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.GeneratedMSBuildEditorConfig.editorconfig
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.genruntimeconfig.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.MvcApplicationPartsAssemblyInfo.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.pdb
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/SamuraiApp.API.RazorTargetAssemblyInfo.cache
+SamuraiApp/SamuraiApp.API/obj/Debug/net5.0/staticwebassets/SamuraiApp.API.StaticWebAssets.Manifest.cache
+SamuraiApp/SamuraiApp.API/obj/project.assets.json
+SamuraiApp/SamuraiApp.API/obj/project.nuget.cache
+SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.dgspec.json
+SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.g.props
+SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.g.targets
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
