--- a/.gitignore
+++ b/.gitignore
@@ -388,3 +388,52 @@ SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.dgspec.json
 SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.g.props
 SamuraiApp/SamuraiApp.API/obj/SamuraiApp.API.csproj.nuget.g.targets
 SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
+SamuraiApp.Domain/obj/SamuraiApp.Domain.csproj.nuget.g.props
+SamuraiApp.Domain/obj/project.nuget.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.csproj.CoreCompileInputs.cache
+SamuraiApp.Domain/obj/Debug/net5.0/SamuraiApp.Domain.assets.cache
+SamuraiApp.Domain/obj/Debug/net5.0/ref/SamuraiApp.Domain.dll
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Domain/bin/Debug/net5.0/SamuraiApp.Domain.deps.json
+SamuraiApp.Domain/bin/Debug/net5.0/ref/SamuraiApp.Domain.dll
+SamuraiApp.Data/obj/SamuraiApp.Data.csproj.nuget.g.props
+SamuraiApp.Data/obj/project.nuget.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.CoreCompileInputs.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.csproj.AssemblyReference.cache
+SamuraiApp.Data/obj/Debug/net5.0/SamuraiApp.Data.assets.cache
+SamuraiApp.Data/obj/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.Data/bin/Debug/net5.0/SamuraiApp.Data.deps.json
+SamuraiApp.Data/bin/Debug/net5.0/ref/SamuraiApp.Data.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Design.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.Relational.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+SamuraiApp.UI/bin/Debug/net5.0/Microsoft.Extensions.DependencyInjection.dll
+SamuraiApp.UI/bin/Debug/net5.0/ref/SamuraiApp.UI.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Data.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.Domain.pdb
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.deps.json
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/bin/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/obj/Debug/net5.0/ref/SamuraiApp.UI.dll
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.assets.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.AssemblyReference.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.CoreCompileInputs.cache
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.csproj.FileListAbsolute.txt
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.dll
+SamuraiApp.UI/obj/Debug/net5.0/SamuraiApp.UI.pdb
+SamuraiApp.UI/obj/project.nuget.cache
+SamuraiApp.UI/obj/SamuraiApp.UI.csproj.nuget.g.props
+SamuraiApp/.vs/SamuraiApp/v17/.suo
